Add WW3 github repo as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "components/mpas-ocean/src/ppr"]
 	path = components/mpas-ocean/src/ppr
 	url = https://github.com/dengwirda/PPR.git
+[submodule "components/ww3/src/source/WW3"]
+	path = components/ww3/src/source/WW3
+	url = git@github.com:NOAA-EMC/WW3.git
