Update WW3 source to global unstrctured branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -66,4 +66,5 @@
 	url = https://github.com/dengwirda/PPR.git
 [submodule "components/ww3/src/source/WW3"]
 	path = components/ww3/src/source/WW3
-	url = git@github.com:NOAA-EMC/WW3.git
+	url = git@github.com:sbrus89/WW3.git
+        branch = global_unstr 
