Update WW3 submodule
 - Rebase RTD fixes

--- a/.gitmodules
+++ b/.gitmodules
@@ -67,4 +67,4 @@
 [submodule "components/ww3/src/source/WW3"]
 	path = components/ww3/src/source/WW3
 	url = git@github.com:sbrus89/WW3.git
-        branch = global_unstr 
+        branch = e3sm
