--- a/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp/input.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp/input.yaml
@@ -15,30 +15,25 @@ Initial Conditions:
     surf_latent_flux: 0.0
     surf_sens_flux: 0.0
 
-Atmosphere Processes:
-  Number of Entries: 6
+atmosphere_processes:
+  atm_procs_list: (homme,shoc,CldFraction,spa,p3,rrtmgp)
   Schedule Type: Sequential
-  Process 0:
+  homme:
     Process Name: Homme
     Enable Precondition Checks: false
     Vertical Coordinate Filename: ${SCREAM_DATA_DIR}/init/homme_shoc_cld_spa_p3_rrtmgp_init_ne2np4.nc
     Moisture: moist
-  Process 1:
-    Process Name: SHOC
+  shoc:
     Grid: Physics GLL
-  Process 2:
-    Process Name: CldFraction
+  CldFraction:
     Grid: Physics GLL
-  Process 3:
-    Process Name: SPA
+  spa:
     Grid: Physics GLL
     SPA Remap File: ${SCREAM_DATA_DIR}/init/map_ne4np4_to_ne2np4_mono.nc
     SPA Data File: ${SCREAM_DATA_DIR}/init/spa_file_unified_and_complete_ne4_scream.nc
-  Process 4:
-    Process Name: P3
+  p3:
     Grid: Physics GLL
-  Process 5:
-    Process Name: RRTMGP
+  rrtmgp:
     Grid: Physics GLL
     active_gases: ["h2o", "co2", "o3", "n2o", "co" , "ch4", "o2", "n2"]
 
