--- a/components/scream/tests/coupled/dynamics_physics/model_restart/input_restarted.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/model_restart/input_restarted.yaml
@@ -15,25 +15,21 @@ Time Stepping:
 Initial Conditions:
   Restart Casename: model_restart
 
-Atmosphere Processes:
-  Number of Entries: 5
+atmosphere_processes:
+  atm_procs_list: (homme,shoc,CldFraction,p3,rrtmgp)
   Schedule Type: Sequential
-  Process 0:
+  homme:
     Process Name: Homme
     Enable Precondition Checks: false
     Vertical Coordinate Filename: ${SCREAM_DATA_DIR}/init/homme_physics_ne2np4.nc
     Moisture: moist
-  Process 1:
-    Process Name: SHOC
+  shoc:
     Grid: Physics GLL
-  Process 2:
-    Process Name: CldFraction
+  CldFraction:
     Grid: Physics GLL
-  Process 3:
-    Process Name: P3
+  p3:
     Grid: Physics GLL
-  Process 4:
-    Process Name: RRTMGP
+  rrtmgp:
     Grid: Physics GLL
     active_gases: ["h2o", "co2", "o3", "n2o", "co" , "ch4", "o2", "n2"]
 
