--- a/components/scream/tests/coupled/physics_only/shoc_cld_p3_rrtmgp/input.yaml
+++ b/components/scream/tests/coupled/physics_only/shoc_cld_p3_rrtmgp/input.yaml
@@ -9,20 +9,16 @@ Time Stepping:
   Start Date: [2021, 10, 12]    # Year, Month, Day
   Number of Steps: ${NUM_STEPS}
 
-Atmosphere Processes:
-  Number of Entries: 4
+atmosphere_processes:
+  atm_procs_list: (shoc,CldFraction,p3,rrtmgp)
   Schedule Type: Sequential
-  Process 0:
-    Process Name: SHOC
+  shoc:
     Grid: Point Grid
-  Process 1:
-    Process Name: CldFraction 
+  CldFraction:
     Grid: Point Grid
-  Process 2:
-    Process Name: P3
+  p3:
     Grid: Point Grid
-  Process 3:
-    Process Name: RRTMGP
+  rrtmgp:
     Grid: Point Grid
     active_gases: ["h2o", "co2", "o3", "n2o", "co" , "ch4", "o2", "n2"]
     Orbital Year: 1990
@@ -45,7 +41,6 @@ Initial Conditions:
     aero_ssa_sw: 0.0
     aero_tau_sw: 0.0
     aero_tau_lw: 0.0
-
 
 # The parameters for I/O control
 Scorpio:
