--- a/components/scream/tests/coupled/physics_only/shoc_cld_spa_p3_rrtmgp/input.yaml
+++ b/components/scream/tests/coupled/physics_only/shoc_cld_spa_p3_rrtmgp/input.yaml
@@ -9,25 +9,20 @@ Time Stepping:
   Start Date: [2021, 10, 12]    # Year, Month, Day
   Number of Steps: ${NUM_STEPS}
 
-Atmosphere Processes:
-  Number of Entries: 5
+atmosphere_processes:
+  atm_procs_list: (shoc,CldFraction,spa,p3,rrtmgp)
   Schedule Type: Sequential
-  Process 0:
-    Process Name: SHOC
+  shoc:
     Grid: Point Grid
-  Process 1:
-    Process Name: CldFraction 
+  CldFraction:
     Grid: Point Grid
-  Process 2:
-    Process Name: SPA
+  p3:
+    Grid: Point Grid
+  spa:
     Grid: Point Grid
     SPA Remap File: ${SCREAM_DATA_DIR}/init/map_ne4np4_to_ne2np4_mono.nc
     SPA Data File: ${SCREAM_DATA_DIR}/init/spa_file_unified_and_complete_ne4_scream.nc
-  Process 3:
-    Process Name: P3
-    Grid: Point Grid
-  Process 4:
-    Process Name: RRTMGP
+  rrtmgp:
     Grid: Point Grid
     active_gases: ["h2o", "co2", "o3", "n2o", "co" , "ch4", "o2", "n2"]
     Orbital Year: 1990
