--- a/components/scream/tests/uncoupled/cld_fraction/input.yaml
+++ b/components/scream/tests/uncoupled/cld_fraction/input.yaml
@@ -9,11 +9,9 @@ Time Stepping:
   Start Date: [2021, 10, 12]    # Year, Month, Day
   Number of Steps: ${NUM_STEPS}
 
-Atmosphere Processes:
-  Number of Entries: 1
-
-  Process 0:
-    Process Name: CldFraction
+atmosphere_processes:
+  atm_procs_list: (CldFraction)
+  CldFraction:
     Grid: Point Grid
 
 Grids Manager:
