--- a/components/scream/tests/uncoupled/homme/input.yaml
+++ b/components/scream/tests/uncoupled/homme/input.yaml
@@ -13,10 +13,10 @@ Initial Conditions:
   Physics GLL:
     Filename: ${SCREAM_DATA_DIR}/init/homme_physics_ne2np4.nc
 
-Atmosphere Processes:
-  Number of Entries: 1
-  Process 0:
-    Process Name: Dynamics
+atmosphere_processes:
+  atm_procs_list: (Dynamics)
+  Dynamics:
+    Type: Homme
     Vertical Coordinate Filename: ${SCREAM_DATA_DIR}/init/homme_physics_ne2np4.nc
     Moisture: moist
 
