--- a/components/scream/tests/uncoupled/rrtmgp/input_unit.yaml
+++ b/components/scream/tests/uncoupled/rrtmgp/input_unit.yaml
@@ -3,11 +3,9 @@
 Debug:
   Atmosphere DAG Verbosity Level: 5
 
-Atmosphere Processes:
-  Number of Entries: 1
-
-  Process 0:
-    Process Name: RRTMGP
+atmosphere_processes:
+  atm_procs_list: (rrtmgp)
+  rrtmgp:
     Grid: Point Grid
     active_gases: ["h2o", "co2", "o3", "n2o", "co" , "ch4", "o2", "n2"]
     Orbital Year: 1990
