--- a/components/scream/src/share/CMakeLists.txt
+++ b/components/scream/src/share/CMakeLists.txt
@@ -45,6 +45,7 @@ set(SHARE_SRC
   util/scream_test_session.cpp
   util/scream_time_stamp.cpp
   util/scream_timing.cpp
+  util/scream_utils.cpp
 )
 
 add_library(scream_share ${SHARE_SRC})
