--- a/components/scream/src/scream_config.h.in
+++ b/components/scream/src/scream_config.h.in
@@ -34,6 +34,11 @@
 // Whether experimental code should be enabled
 #cmakedefine SCREAM_ENABLE_EXPERIMENTAL
 
+// Whether getrusage can be used to get memory usage
+#cmakedefine SCREAM_ENABLE_GETRUSAGE
+// Whether /proc/self/statm can be used to get memory usage
+#cmakedefine SCREAM_ENABLE_STATM
+
 // Data directory for the scream project
 #define SCREAM_DATA_DIR "${SCREAM_DATA_DIR}"
 
