Remove layerThickEdge diagnostics call in remap

--- a/components/mpas-ocean/src/shared/Makefile
+++ b/components/mpas-ocean/src/shared/Makefile
@@ -224,7 +224,7 @@ mpas_ocn_vertical_advection.o: mpas_ocn_config.o
 
 mpas_ocn_vertical_regrid.o: mpas_ocn_config.o mpas_ocn_constants.o mpas_ocn_mesh.o
 
-mpas_ocn_vertical_remap.o: mpas_ocn_diagnostics.o mpas_ocn_config.o mpas_ocn_constants.o mpas_ocn_mesh.o mpas_ocn_vertical_regrid.o
+mpas_ocn_vertical_remap.o: mpas_ocn_config.o mpas_ocn_constants.o mpas_ocn_diagnostics_variables.o mpas_ocn_mesh.o mpas_ocn_vertical_regrid.o
 
 clean:
 	$(RM) *.o *.i *.mod *.f90
