SCREAM: added test for SE grid IO

--- a/components/scream/src/share/io/tests/CMakeLists.txt
+++ b/components/scream/src/share/io/tests/CMakeLists.txt
@@ -17,6 +17,12 @@ CreateUnitTest(io_test "io.cpp" scream_io LABELS "io"
   MPI_RANKS 1 ${SCREAM_TEST_MAX_RANKS}
 )
 
+# Test output on SE grid
+configure_file(io_test_se_grid.yaml io_test_se_grid.yaml)
+CreateUnitTest(io_test_se_grid "io_se_grid.cpp" scream_io LABELS "io"
+  MPI_RANKS 1 ${SCREAM_TEST_MAX_RANKS}
+)
+
 ## Test output restart
 # NOTE: Each restart test is a "setup" for the restart_check test,
 # and cannot run in parallel with other restart tests,
