SCREAM: add multirank test for model restart (if possible)

--- a/components/scream/tests/coupled/dynamics_physics/model_restart/model_restart_output.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/model_restart/model_restart_output.yaml
@@ -33,9 +33,11 @@ Fields:
       - vtheta_dp_dyn
       - dp3d_dyn
 Output Control:
+  MPI Ranks in Filename: true
   Frequency: 2
   Frequency Units: Steps
 Checkpoint Control:
+  MPI Ranks in Filename: true
   Frequency: 1
   Frequency Units: Steps
 ...
