--- a/components/scream/tests/coupled/dynamics_physics/model_restart/model_output.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/model_restart/model_output.yaml
@@ -33,7 +33,7 @@ Fields:
       - vtheta_dp_dyn
       - dp3d_dyn
 Output Control:
-Output Control:
+  MPI Ranks in Filename: true
   Frequency: 2
   Frequency Units: Steps
 ...
