--- a/components/scream/data/scream_default_output.yaml
+++ b/components/scream/data/scream_default_output.yaml
@@ -1,6 +1,6 @@
 %YAML 1.1
 ---
-Casename: SCREAMv1_output_hydrostatic
+Casename: ${CASE}.atm.hi
 Averaging Type: Instant
 Max Snapshots Per File: 744 # One output every 31 days
 Fields:
@@ -48,5 +48,8 @@ Fields:
 Output Control:
   Frequency: 2
   Frequency Units: Steps
-  MPI Ranks in Filename: true
+  MPI Ranks in Filename: false
+  Timestamp in Filename: true
+  AVG Type in Filename: false
+  Frequency in Filename: false
 ...
