SCREAM: use CIME vars for output frequency in default output yaml file

--- a/components/scream/data/scream_default_output.yaml
+++ b/components/scream/data/scream_default_output.yaml
@@ -46,8 +46,8 @@ Fields:
       - surf_sens_flux
       - surf_mom_flux
 Output Control:
-  Frequency: 2
-  Frequency Units: Steps
+  Frequency: ${HIST_N}
+  Frequency Units: ${HIST_OPTION}
   MPI Ranks in Filename: false
   Timestamp in Filename: true
   AVG Type in Filename: false
