--- a/components/scream/tests/coupled/physics_only/shoc_cld_p3_rrtmgp/shoc_cld_p3_rrtmgp_output.yaml
+++ b/components/scream/tests/coupled/physics_only/shoc_cld_p3_rrtmgp/shoc_cld_p3_rrtmgp_output.yaml
@@ -43,7 +43,7 @@ Field Names:
   - surf_mom_flux
   - surf_sens_flux
   - cldfrac_ice
-  - nc_activated
+  - nccn
   - ni_activated
   - nc_nuceat_tend
   - eff_radius_qc
