--- a/components/scream/tests/uncoupled/spa/spa_standalone_output.yaml
+++ b/components/scream/tests/uncoupled/spa/spa_standalone_output.yaml
@@ -8,7 +8,7 @@ Field Names:
   - aero_ssa_sw
   - aero_tau_lw
   - aero_tau_sw
-  - nc_activated
+  - nccn
   - p_mid
 Output Control:
   Frequency: ${NUM_STEPS}
