--- a/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_p3_rrtmgp/input.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_p3_rrtmgp/input.yaml
@@ -20,21 +20,30 @@ Initial Conditions:
     aero_tau_lw: 0.0
 
 atmosphere_processes:
-  atm_procs_list: (homme,shoc,CldFraction,p3,rrtmgp)
+  atm_procs_list: (homme,physics)
   Schedule Type: Sequential
   homme:
     Enable Precondition Checks: false
     Vertical Coordinate Filename: ${SCREAM_DATA_DIR}/init/homme_shoc_cld_p3_rrtmgp_init_ne2np4.nc
     Moisture: moist
-  shoc:
-    Grid: Physics GLL
-  CldFraction:
-    Grid: Physics GLL
-  p3:
-    Grid: Physics GLL
-  rrtmgp:
-    Grid: Physics GLL
-    active_gases: ["h2o", "co2", "o3", "n2o", "co" , "ch4", "o2", "n2"]
+  physics:
+    atm_procs_list: (mac_mic,rrtmgp)
+    Schedule Type: Sequential
+    Type: Group
+    mac_mic:
+      atm_procs_list: (shoc,CldFraction,p3)
+      Schedule Type: Sequential
+      Type: Group
+      Number of Subcycles: ${MAC_MIC_SUBCYCLES}
+      shoc:
+        Grid: Physics GLL
+      CldFraction:
+        Grid: Physics GLL
+      p3:
+        Grid: Physics GLL
+    rrtmgp:
+      Grid: Physics GLL
+      active_gases: ["h2o", "co2", "o3", "n2o", "co" , "ch4", "o2", "n2"]
 
 Grids Manager:
   Type: Dynamics Driven
