--- a/components/scream/tests/coupled/physics_only/shoc_cld_spa_p3_rrtmgp/input.yaml
+++ b/components/scream/tests/coupled/physics_only/shoc_cld_spa_p3_rrtmgp/input.yaml
@@ -10,18 +10,23 @@ Time Stepping:
   Number of Steps: ${NUM_STEPS}
 
 atmosphere_processes:
-  atm_procs_list: (shoc,CldFraction,spa,p3,rrtmgp)
+  atm_procs_list: (mac_mic,rrtmgp)
   Schedule Type: Sequential
-  shoc:
-    Grid: Point Grid
-  CldFraction:
-    Grid: Point Grid
-  p3:
-    Grid: Point Grid
-  spa:
-    Grid: Point Grid
-    SPA Remap File: ${SCREAM_DATA_DIR}/init/map_ne4np4_to_ne2np4_mono.nc
-    SPA Data File: ${SCREAM_DATA_DIR}/init/spa_file_unified_and_complete_ne4_20220428.nc
+  mac_mic:
+    atm_procs_list: (shoc,CldFraction,spa,p3)
+    Type: Group
+    Schedule Type: Sequential
+    Number of Subcycles: ${MAC_MIC_SUBCYCLES}
+    shoc:
+      Grid: Point Grid
+    CldFraction:
+      Grid: Point Grid
+    p3:
+      Grid: Point Grid
+    spa:
+      Grid: Point Grid
+      SPA Remap File: ${SCREAM_DATA_DIR}/init/map_ne4np4_to_ne2np4_mono.nc
+      SPA Data File: ${SCREAM_DATA_DIR}/init/spa_file_unified_and_complete_ne4_20220428.nc
   rrtmgp:
     Grid: Point Grid
     active_gases: ["h2o", "co2", "o3", "n2o", "co" , "ch4", "o2", "n2"]
