--- a/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp_128levels/input.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp_128levels/input.yaml
@@ -16,26 +16,35 @@ Initial Conditions:
     surf_sens_flux: 0.0
 
 atmosphere_processes:
-  atm_procs_list: (homme,shoc,CldFraction,spa,p3,rrtmgp)
+  atm_procs_list: (homme,physics)
   Schedule Type: Sequential
   homme:
     Process Name: Homme
     Enable Precondition Checks: false
     Vertical Coordinate Filename: ${SCREAM_DATA_DIR}/init/screami_ne2np4L128_20220524.nc
     Moisture: moist
-  shoc:
-    Grid: Physics GLL
-  CldFraction:
-    Grid: Physics GLL
-  spa:
-    Grid: Physics GLL
-    SPA Remap File: none
-    SPA Data File: ${SCREAM_DATA_DIR}/init/spa_file_unified_and_complete_ne4_20220428.nc
-  p3:
-    Grid: Physics GLL
-  rrtmgp:
-    Grid: Physics GLL
-    active_gases: ["h2o", "co2", "o3", "n2o", "co" , "ch4", "o2", "n2"]
+  physics:
+    atm_procs_list: (mac_aero_mic,rrtmgp)
+    Schedule Type: Sequential
+    Type: Group
+    mac_aero_mic:
+      atm_procs_list: (shoc,CldFraction,spa,p3)
+      Type: Group
+      Schedule Type: Sequential
+      Number of Subcycles: ${MAC_MIC_SUBCYCLES}
+      shoc:
+        Grid: Physics GLL
+      CldFraction:
+        Grid: Physics GLL
+      spa:
+        Grid: Physics GLL
+        SPA Remap File: ${SCREAM_DATA_DIR}/init/map_ne4np4_to_ne2np4_mono.nc
+        SPA Data File: ${SCREAM_DATA_DIR}/init/spa_file_unified_and_complete_ne4_20220428.nc
+      p3:
+        Grid: Physics GLL
+    rrtmgp:
+      Grid: Physics GLL
+      active_gases: ["h2o", "co2", "o3", "n2o", "co" , "ch4", "o2", "n2"]
 
 Grids Manager:
   Type: Dynamics Driven
