--- a/components/scream/tests/coupled/physics_only/shoc_cld_spa_p3_rrtmgp/CMakeLists.txt
+++ b/components/scream/tests/coupled/physics_only/shoc_cld_spa_p3_rrtmgp/CMakeLists.txt
@@ -1,7 +1,7 @@
 include (ScreamUtils)
 
 # Create the test
-set (TEST_LABELS "shoc;cld;spa;p3;rrtmgp;physics")
+set (TEST_LABELS "shoc;cld;spa;p3;rrtmgp;physics;driver")
 set (NEED_LIBS shoc cld_fraction spa p3 scream_rrtmgp scream_control scream_share physics_share)
 CreateUnitTest(shoc_cld_spa_p3_rrtmgp shoc_cld_spa_p3_rrtmgp.cpp "${NEED_LIBS}" LABELS ${TEST_LABELS}
   MPI_RANKS 1 ${SCREAM_TEST_MAX_RANKS}
@@ -18,7 +18,7 @@ math (EXPR MAC_MIC_SUBCYCLES "(${ATM_TIME_STEP} + ${SHOC_MAX_DT} - 1) / ${SHOC_M
 
 # Ensure test input files are present in the data dir
 set (TEST_INPUT_FILES
-  init/shoc_cld_spa_p3_rrtmgp_init_ne2np4.nc
+  init/homme_shoc_cld_spa_p3_rrtmgp_init_ne2np4_20220524.nc
   init/spa_init_ne2np4.nc
   init/map_ne4np4_to_ne2np4_mono.nc
   init/spa_file_unified_and_complete_ne4_20220428.nc
