--- a/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp_128levels/homme_shoc_cld_spa_p3_rrtmgp_128levels_output.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp_128levels/homme_shoc_cld_spa_p3_rrtmgp_128levels_output.yaml
@@ -46,7 +46,7 @@ Fields:
       - surf_mom_flux
       - surf_sens_flux
       - cldfrac_ice
-      - nc_activated
+      - nccn
       - ni_activated
       - nc_nuceat_tend
       - eff_radius_qc
