--- a/components/scream/tests/uncoupled/rrtmgp/rrtmgp_standalone_output.yaml
+++ b/components/scream/tests/uncoupled/rrtmgp/rrtmgp_standalone_output.yaml
@@ -14,7 +14,7 @@ Field Names:
   - sfc_alb_dir_vis
   - sfc_alb_dif_nir
   - sfc_alb_dif_vis
-  - sfc_flux_dif_vis
+  - sfc_flux_lw_dn
   - sfc_flux_sw_net
   - rad_heating_pdel
  
