--- a/components/scream/src/physics/CMakeLists.txt
+++ b/components/scream/src/physics/CMakeLists.txt
@@ -9,7 +9,7 @@ else()
   message(STATUS "WARNING: RRTMGP only supported for double precision builds; skipping")
 endif()
 add_subdirectory(shoc)
-if (SCREAM_ENABLE_EXPERIMENTAL)
+if (SCREAM_TEST_LEVEL GREATER_EQUAL SCREAM_TEST_LEVEL_EXPERIMENTAL)
   add_subdirectory(zm)
 endif()
 add_subdirectory(cld_fraction)
