--- a/components/scream/tests/uncoupled/CMakeLists.txt
+++ b/components/scream/tests/uncoupled/CMakeLists.txt
@@ -13,7 +13,7 @@ if (NOT SCREAM_BASELINES_ONLY)
   else()
     message(STATUS "RRTMGP only supported for double precision builds; skipping")
   endif()
-  if (SCREAM_ENABLE_EXPERIMENTAL)
+  if (SCREAM_TEST_LEVEL GREATER_EQUAL SCREAM_TEST_LEVEL_EXPERIMENTAL)
     add_subdirectory(zm)
   endif()
 endif()
