Introduce four new diagnostics to calculate water path.
This commit establishes four diagnostics, each can be used to output
the total water column path for the four water phases,
1. vapor  - VapWaterPath
2. liquid - LiqWaterPath
3. ice    - IceWaterPath
4. rain   - RainWaterPath

--- a/components/scream/src/diagnostics/CMakeLists.txt
+++ b/components/scream/src/diagnostics/CMakeLists.txt
@@ -8,6 +8,10 @@ set(DIAGNOSTIC_SRCS
   vertical_layer_midpoint.cpp
   dry_static_energy.cpp
   sea_level_pressure.cpp
+  liquid_water_path.cpp
+  ice_water_path.cpp
+  vapor_water_path.cpp
+  rain_water_path.cpp
 )
 
 add_library(diagnostics ${DIAGNOSTIC_SRCS})
