Update the initial condition files used by the stand alone tests.
This commit updates the initial condition file used by stand alone
testing to include the dry pressure coordinates.

This commit also streamlines where that file is defined.  Up until now
each stand alone test explicitly defined the location and name of the initial
condition file in its own input.yaml file.  Although the file was the same
for all of the tests.  This meant a lot of repeated code and made it tedious
to update the file.

This commit adds a cmake variable to the tests that defines the name of the
initial condition file they all use, so when we update the file again we only
have to change the name in once location, namely `components/scream/tests/CMakeLists.txt`.

--- a/components/scream/tests/coupled/dynamics_physics/model_restart/CMakeLists.txt
+++ b/components/scream/tests/coupled/dynamics_physics/model_restart/CMakeLists.txt
@@ -118,4 +118,4 @@ configure_file(${SCREAM_SRC_DIR}/dynamics/homme/tests/theta.nl
                ${CMAKE_CURRENT_BINARY_DIR}/namelist.nl)
 
 # Ensure test input files are present in the data dir
-GetInputFile(init/screami_ne2np4L72_20220524.nc)
+GetInputFile(init/${EAMxx_tests_IC_FILE_72lev})
