--- a/components/scream/tests/coupled/physics_only/atm_proc_subcycling/CMakeLists.txt
+++ b/components/scream/tests/coupled/physics_only/atm_proc_subcycling/CMakeLists.txt
@@ -4,7 +4,7 @@ INCLUDE (ScreamUtils)
 CreateUnitTestExec (shoc_p3 shoc_p3.cpp "shoc;p3;scream_control")
 
 # Ensure test input files are present in the data dir
-GetInputFile(init/screami_ne2np4L72_20220524.nc)
+GetInputFile(init/${EAMxx_tests_IC_FILE_72lev})
 
 # Run a test with subcycling
 set (NUM_SUBCYCLES 3)
