--- a/components/scream/tests/uncoupled/spa/CMakeLists.txt
+++ b/components/scream/tests/uncoupled/spa/CMakeLists.txt
@@ -22,7 +22,7 @@ CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/spa_standalone_output.yaml
 
 # Ensure test input files are present in the data dir
 set (TEST_INPUT_FILES
-  screami_ne2np4L72_20220524.nc
+  ${EAMxx_tests_IC_FILE_72lev}
   map_ne4np4_to_ne2np4_mono.nc
   spa_file_unified_and_complete_ne4_20220428.nc
 )
