--- a/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp_128levels/input.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp_128levels/input.yaml
@@ -10,7 +10,7 @@ Time Stepping:
   Number of Steps: ${NUM_STEPS}
 
 Initial Conditions:
-  Filename: ${SCREAM_DATA_DIR}/init/screami_ne2np4L128_20220525.nc
+  Filename: ${SCREAM_DATA_DIR}/init/${EAMxx_tests_IC_FILE_128lev}
   surf_evap: 0.0
   surf_sens_flux: 0.0
   precip_ice_surf_mass: 0.0
@@ -22,7 +22,7 @@ atmosphere_processes:
   homme:
     Process Name: Homme
     Enable Precondition Checks: false
-    Vertical Coordinate Filename: ${SCREAM_DATA_DIR}/init/screami_ne2np4L128_20220525.nc
+    Vertical Coordinate Filename: ${SCREAM_DATA_DIR}/init/${EAMxx_tests_IC_FILE_128lev}
     Moisture: moist
   physics:
     atm_procs_list: (mac_aero_mic,rrtmgp)
