--- a/components/scream/tests/uncoupled/homme/input.yaml
+++ b/components/scream/tests/uncoupled/homme/input.yaml
@@ -10,13 +10,13 @@ Time Stepping:
   Number of Steps: ${NUM_STEPS}
 
 Initial Conditions:
-  Filename: ${SCREAM_DATA_DIR}/init/screami_ne2np4L72_20220524.nc
+  Filename: ${SCREAM_DATA_DIR}/init/${EAMxx_tests_IC_FILE_72lev}
 
 atmosphere_processes:
   atm_procs_list: (Dynamics)
   Dynamics:
     Type: Homme
-    Vertical Coordinate Filename: ${SCREAM_DATA_DIR}/init/screami_ne2np4L72_20220524.nc
+    Vertical Coordinate Filename: ${SCREAM_DATA_DIR}/init/${EAMxx_tests_IC_FILE_72lev}
     Moisture: moist
 
 Grids Manager:
