--- a/components/scream/tests/uncoupled/shoc/CMakeLists.txt
+++ b/components/scream/tests/uncoupled/shoc/CMakeLists.txt
@@ -17,7 +17,7 @@ set (SHOC_MAX_DT 300)
 math (EXPR NUM_SUBCYCLES "(${ATM_TIME_STEP} + ${SHOC_MAX_DT} - 1) / ${SHOC_MAX_DT}")
 
 # Ensure test input files are present in the data dir
-GetInputFile(init/screami_ne2np4L72_20220524.nc)
+GetInputFile(init/${EAMxx_tests_IC_FILE_72lev})
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/input.yaml
                ${CMAKE_CURRENT_BINARY_DIR}/input.yaml)
