start; another change is in sbetr, not commited

--- a/components/scream/CMakeLists.txt
+++ b/components/scream/CMakeLists.txt
@@ -384,7 +384,8 @@ if (SCREAM_DOUBLE_PRECISION)
   if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
     set(SCREAM_Fortran_FLAGS -real-size 64)
   else()
-    set(SCREAM_Fortran_FLAGS -fdefault-real-8 -fdefault-double-8)
+    set(SCREAM_Fortran_FLAGS -s default32 -eZ)
+	  #set(SCREAM_Fortran_FLAGS -fdefault-real-8 -fdefault-double-8)
   endif()
 endif()
 
