--- a/share/util/shr_infnan_mod.F90.in
+++ b/share/util/shr_infnan_mod.F90.in
@@ -1,9 +1,9 @@
 ! Flag representing compiler support of Fortran 2003's
 ! ieee_arithmetic intrinsic module.
-#if defined CPRIBM || defined CPRPGI || defined CPRNVIDIA || defined CPRINTEL ||  defined CPRCRAY || defined CPRNAG \
-  || defined CPRAMD || defined CPRFJ
+!#if defined CPRIBM || defined CPRPGI || defined CPRNVIDIA || defined CPRINTEL ||  defined CPRCRAY || defined CPRNAG \
+!  || defined CPRAMD || defined CPRFJ
 #define HAVE_IEEE_ARITHMETIC
-#endif
+!#endif
 
 module shr_infnan_mod
 !---------------------------------------------------------------------
