Fix issue where dry pressure was not being updated during the run_impl step.
This commit adds the new dry pressure coordinate calculation to the homme post
process routine, which does not call update_pressure(), but does need to update
the pressure.

This commit also adds the dry pressure coordinates calculated in homme to the default
output of our stand alone tests.

--- a/components/scream/tests/uncoupled/homme/homme_standalone_output.yaml
+++ b/components/scream/tests/uncoupled/homme/homme_standalone_output.yaml
@@ -13,6 +13,9 @@ Fields:
       - p_mid
       - pseudo_density
       - horiz_winds
+      - pseudo_density_dry
+      - p_dry_int
+      - p_dry_mid
  
 Output Control:
   Frequency: ${NUM_STEPS}
