--- a/components/scream/tests/coupled/dynamics_physics/model_restart/model_output.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/model_restart/model_output.yaml
@@ -13,6 +13,9 @@ Fields:
       - omega
       - p_int
       - p_mid
+      - pseudo_density_dry
+      - p_dry_int
+      - p_dry_mid
       # SHOC
       - cldfrac_liq
       - eddy_diff_mom
