update to various master changes

--- a/components/scream/tests/coupled/surface_coupling_only/input.yaml
+++ b/components/scream/tests/coupled/surface_coupling_only/input.yaml
@@ -4,7 +4,6 @@ Debug:
   Atmosphere DAG Verbosity Level: 5
 
 Time Stepping:
-  Time Step: ${ATM_TIME_STEP}
   Start Time: [12, 30, 00]      # Hours, Minutes, Seconds
   Start Date: [2021, 10, 12]    # Year, Month, Day
 
@@ -22,22 +21,21 @@ Grids Manager:
   Number of Vertical Levels:  72  # Will want to change to 128 when a valid unit test is available.
 
 Initial Conditions:
-  Point Grid:
-    # These fields are used during the export. We set them to constant values
-    p_int:            1.0
-    pseudo_density:   2.0
-    phis:             3.0
-    p_mid:            4.0
-    qv:               5.0
-    T_mid:            6.0
-    horiz_winds:     [7.0, 8.0]
-    precip_liq_surf:  9.0
-    precip_ice_surf:  10.0
-    sfc_flux_dir_nir: 11.0
-    sfc_flux_dir_vis: 12.0
-    sfc_flux_dif_nir: 13.0
-    sfc_flux_dif_vis: 14.0
-    sfc_flux_sw_net:  15.0
-    sfc_flux_lw_dn:   16.0
+  # These fields are used during the export. We set them to constant values
+  p_int:                1.0
+  pseudo_density:       2.0
+  phis:                 3.0
+  p_mid:                4.0
+  qv:                   5.0
+  T_mid:                6.0
+  horiz_winds:         [7.0, 8.0]
+  precip_liq_surf_mas:  9.0
+  precip_ice_surf_mass: 10.0
+  sfc_flux_dir_nir:     11.0
+  sfc_flux_dir_vis:     12.0
+  sfc_flux_dif_nir:     13.0
+  sfc_flux_dif_vis:     14.0
+  sfc_flux_sw_net:      15.0
+  sfc_flux_lw_dn:       16.0
 
 ...
