manually bring in homme hip branch

--- a/components/homme/src/preqx_kokkos/CMakeLists.txt
+++ b/components/homme/src/preqx_kokkos/CMakeLists.txt
@@ -20,12 +20,12 @@ MACRO(PREQX_KOKKOS_SETUP)
 
   # Make INCLUDE_DIRS global so the tests can access it
   SET (EXEC_LIB_INCLUDE_DIRS
+    ${TARGET_DIR}/cxx
     ${UTILS_TIMING_DIR}
     ${UTILS_TIMING_SRC_DIR}
     ${PREQX_SHARE_DIR}
-    ${TARGET_DIR}/cxx
     ${SRC_SHARE_DIR}/cxx
-    ${HOMME_BINARY_DIR}/src/share/cxx)
+    ${HOMME_BINARY_DIR}/src/share/cxx
   )
 
   SET (EXEC_INCLUDE_DIRS
@@ -138,9 +138,6 @@ MACRO(PREQX_KOKKOS_SETUP)
     ${SRC_SHARE_F90}
     ${TEST_SRC_F90}
     ${SRC_DIR}/checksum_mod.F90
-    ${SRC_DIR}/repro_sum_mod.F90
-    ${SRC_DIR}/surfaces_mod.F90
-    ${SRC_DIR}/test_mod.F90
     ${SRC_DIR}/common_io_mod.F90
     ${SRC_DIR}/common_movie_mod.F90
     ${SRC_DIR}/interpolate_driver_mod.F90
@@ -149,7 +146,10 @@ MACRO(PREQX_KOKKOS_SETUP)
     ${SRC_DIR}/pio_io_mod.F90
     ${SRC_DIR}/prim_movie_mod.F90
     ${SRC_DIR}/prim_restart_mod.F90
+    ${SRC_DIR}/repro_sum_mod.F90
     ${SRC_DIR}/restart_io_mod.F90
+    ${SRC_DIR}/surfaces_mod.F90
+    ${SRC_DIR}/test_mod.F90
     ${UTILS_SHARE_DIR}/shr_const_mod.F90
     ${UTILS_SHARE_DIR}/shr_file_mod.F90
     ${UTILS_SHARE_DIR}/shr_kind_mod.F90
@@ -235,7 +235,7 @@ MACRO(PREQX_KOKKOS_SETUP)
     SET (QSIZE_D 4)
   ENDIF ()
   # for some of matt's old scripts which use preqx_qsize_d
-  IF (PREQX_QSIZE_D)
+  IF (PREQX_QSIZE_D)      
     SET (QSIZE_D ${PREQX_QSIZE_D})
   ENDIF ()
 
