change cuda_build to hommexx_enable_gpu, wip

--- a/components/scream/CMakeLists.txt
+++ b/components/scream/CMakeLists.txt
@@ -30,7 +30,9 @@ if (SCREAM_CIME_BUILD)
 endif ()
 
 message("Kokkos_ENABLE_CUDA ${Kokkos_ENABLE_CUDA}")
+message("Kokkos_ENABLE_HIP  ${Kokkos_ENABLE_HIP}")
 
+#not sure this is needed for HIP?
 if (Kokkos_ENABLE_CUDA)
   if (Kokkos_ENABLE_CUDA_RELOCATABLE_DEVICE_CODE)
     if (Kokkos_ENABLE_DEBUG_BOUNDS_CHECK)
@@ -113,17 +115,27 @@ include(CTest)
 
 set (CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -cpp")
 
+#this is now a bad name as this macro will be needed in scream as well
+set (HOMMEXX_ENABLE_GPU FALSE)
+set (CUDA_BUILD FALSE) #needed for yakl if kokkos vars are not visible there?
+set (HIP_BUILD FALSE) #needed for yakl if kokkos vars are not visible there?
+
 # Determine if this is a Cuda build.
 if (Kokkos_ENABLE_CUDA)
-  set(CUDA_BUILD TRUE)
-else()
-  set(CUDA_BUILD FALSE)
+  # Add CUDA as a language for CUDA builds
+  enable_language(CUDA)
+  set (HOMMEXX_ENABLE_GPU TRUE)
+  set (CUDA_BUILD TRUE) #needed for yakl if kokkos vars are not visible there?
 endif ()
 
-# Add CUDA as a language for CUDA builds
-if (CUDA_BUILD)
-  enable_language(CUDA)
-endif()
+# Determine if this is a Cuda build.
+if (Kokkos_ENABLE_HIP)
+  # Add CUDA as a language for CUDA builds
+  enable_language(HIP)
+  set (HOMMEXX_ENABLE_GPU TRUE)
+  set (HIP_BUILD TRUE) #needed for yakl if kokkos vars are not visible there?
+endif ()
+
 
 ### Scream default configuration options
 set(DEFAULT_MAX_RANKS 4)
@@ -132,7 +144,7 @@ set(DEFAULT_MIMIC_GPU FALSE)
 set(DEFAULT_FPE FALSE)
 set(DEFAULT_PACK_SIZE 16)
 set(DEFAULT_POSSIBLY_NO_PACK FALSE)
-if (CUDA_BUILD)
+if (HOMMEXX_ENABLE_GPU)
   # On the GPU, the pack size must be 1
   set(DEFAULT_PACK_SIZE 1)
   set(DEFAULT_MAX_THREADS 1)
@@ -318,7 +330,7 @@ check_pack_size(${SCREAM_PACK_SIZE} ${SCREAM_POSSIBLY_NO_PACK_SIZE} "possibly no
 
 if (SCREAM_DEBUG)
   set(DEFAULT_FPMODEL "strict")
-  if (${SCREAM_PACK_SIZE} EQUAL 1 AND NOT ${CUDA_BUILD})
+  if (${SCREAM_PACK_SIZE} EQUAL 1 AND NOT ${HOMMEXX_ENABLE_GPU})
     set(DEFAULT_FPE TRUE)
   endif ()
 endif()
@@ -390,7 +402,7 @@ if (SCREAM_DOUBLE_PRECISION)
   endif()
 endif()
 
-print_var(CUDA_BUILD)
+print_var(HOMMEXX_ENABLE_GPU)
 print_var(SCREAM_DOUBLE_PRECISION)
 print_var(SCREAM_MIMIC_GPU)
 print_var(SCREAM_FPE)
