Fix yaml control files for coupled and uncoupled tests

--- a/components/scream/tests/coupled/dynamics_physics/model_restart/input_initial.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/model_restart/input_initial.yaml
@@ -57,6 +57,6 @@ Scorpio:
     Casename: model_restart
     output_control:
       Frequency:       1
-      frequency_units: Steps
+      frequency_units: nsteps
   output_yaml_files: ["model_restart_output.yaml"]
 ...
