--- a/components/scream/tests/coupled/physics_only/atm_proc_subcycling/output.yaml
+++ b/components/scream/tests/coupled/physics_only/atm_proc_subcycling/output.yaml
@@ -35,7 +35,7 @@ Field Names:
  
 output_control:
   Frequency: ${NUM_STEPS}
-  frequency_units: Steps
+  frequency_units: nsteps
   Timestamp in Filename: false
   MPI Ranks in Filename: false
 ...
